ビュー修正

--- a/app/assets/stylesheets/_comment.scss
+++ b/app/assets/stylesheets/_comment.scss
@@ -103,7 +103,7 @@
               top: 24px;
               left: -7px;
             }
-            &__seller{
+            &__seller1{
               font-weight:100;
               position: relative;
               font-size: 12px;
