--- a/app/views/users/purchased.html.haml
+++ b/app/views/users/purchased.html.haml
@@ -14,8 +14,20 @@
           %li.mypage__nav__main-contents__listings__tabs__tab.active.trad
             %p 過去の取引
         .mypage__nav__main-contents__bottom-tabcontents
+        -if @solod_items.empty?
           %ul.mypage__nav__main-contents__bottom-tabcontents__item-lists
             %li.mypage__nav__main-contents__bottom-tabcontents__item-lists__list.show
-              過去に取引した商品がありません
+              購入した商品がありません
+        -else
+          %ul.mypage__nav__main-contents__bottom-tabcontents__listing-lists
+          - @solod_items.reverse_each do |item|
+            = link_to item_path(item) do
+              %li.mypage__nav__main-contents__bottom-tabcontents__listing-lists__list.new
+                = image_tag url_for(item.images.first), heigth: '50', width: '50', class: "item-image"
+                .item-name
+                  = "#{item.seller.nickname}さんから「#{item.name}」を購入しました。"
+                %span.item-stutas{style:"color:white;background:#ea352d;"}
+                  購入済み
+                %i.fas.fa-angle-right
 = render "layouts/banner"
 = render "layouts/footer"
