--- a/app/assets/stylesheets/_nav-count.scss
+++ b/app/assets/stylesheets/_nav-count.scss
@@ -12,6 +12,19 @@
   color: #fff;
   animation: jump 3s ease-out;
 }
+.nav-count0{
+  position: absolute;
+  top: 12px;
+  left: 215px;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: #ea352d;
+  text-align: center;
+  line-height: 20px;
+  font-size: 12px;
+  color: #fff;
+}
 .nav-count1{
   position: absolute;
   top: -2px;
