--- a/app/assets/stylesheets/_nav-count.scss
+++ b/app/assets/stylesheets/_nav-count.scss
@@ -24,6 +24,7 @@
   line-height: 20px;
   font-size: 12px;
   color: #fff;
+  animation: kururi 2s  ease-out;
 }
 .nav-count1{
   position: absolute;
@@ -54,6 +55,15 @@
   color: #fff;
   animation: subDelayJump 3s ease-out;
   animation-delay: 0.1s;
+}
+
+@keyframes kururi {
+  0%  {transform:  scale( 1, 1);}
+  20% {transform:  scale(-1, 1);}
+  40% {transform:  scale( 1, 1);}
+  60% {transform:  scale(-1, 1);}
+  80% {transform:  scale( 1, 1);}
+  100%{transform:  scale( 1, 1);}
 }
 
 @keyframes jump {
