--- a/app/views/items/root.html.haml
+++ b/app/views/items/root.html.haml
@@ -34,11 +34,10 @@
       %span
     .slideshow-dot
       %span
-
 .main-contents
   .pickup
     %h2.pickup__head ピックアップカテゴリー
-
+    =render 'layouts/top_page'
     .pickup__content.clearfix
       %h3.pickup__text
         = link_to category_path(1) do
