--- a/app/assets/stylesheets/_top_page.scss
+++ b/app/assets/stylesheets/_top_page.scss
@@ -8,7 +8,7 @@
   }
   &__box{
     margin: auto;
-    padding: 50px;
+    padding: 0 50px 0 50px;
     &__contents{
       width: 200px;
       height: 250px;
@@ -22,19 +22,19 @@
       &__image{
         float: left;
         height: 198px;
-        &__price{
-          float: left;
-          background:rgba(92, 91, 91, 0.719);
-          padding: 7px;
-          position: relative;
-          bottom:50px;
-          color:white;
-          border-top-right-radius: 10px;
-          border-bottom-right-radius: 10px;
-          font-size: 14px;
-          letter-spacing: .02em;
-          font-weight: 100;
-        }
+      }
+      &__price{
+        float: left;
+        background:rgba(92, 91, 91, 0.719);
+        padding: 7px;
+        position: relative;
+        bottom:50px;
+        color:white;
+        border-top-right-radius: 10px;
+        border-bottom-right-radius: 10px;
+        font-size: 14px;
+        letter-spacing: .02em;
+        font-weight: 100;
       }
       &__name{
         padding-left: 10px;
@@ -51,5 +51,23 @@
       -moz-box-shadow: rgba(124, 183, 223, 0.2) 0px 0px 1px 1px;
       box-shadow: rgba(70, 187, 255, 0.856) 0px 0px 1px 1px;
     }
+  }
+}
+.sold1 {
+  position: relative;
+  top: -190px;
+  color: white;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 100px 100px 0 0;
+  border-color: #EA352E transparent transparent transparent;
+  p{
+    position: absolute;
+    top: -80px;
+    font-size: 20px;
+    font-weight: bold;
+    transform: rotate(-45deg);
+    letter-spacing: 2px;
   }
 }
