--- a/app/views/items/root.html.haml
+++ b/app/views/items/root.html.haml
@@ -36,16 +36,14 @@
 
 .main-contents
   .pickup
-    %h2.pickup__head ピックアップカテゴリー
-    =render 'layouts/top_page'
     .pickup__content.clearfix
       %h3.pickup__text
         = link_to category_path(1) do
           レディース 新着アイテム
-      =render 'picup_content',{ items: @women_items }
       .pickup__view-all
         = link_to category_path(1) do
           すべての商品を見る
+      =render 'layouts/top_page',{ items: @women_items }
 
     .pickup__content.clearfix
       %h3.pickup__text
