--- a/app/views/items/root.html.haml
+++ b/app/views/items/root.html.haml
@@ -67,8 +67,7 @@
 
 .main-contents
   .pickup
-    %h2.pickup__head ピックアップブランドアイテム
-
+    = render 'pickup_brand'
     .pickup__content.clearfix
       %h3.pickup__text
         = link_to "/" do
