ビュー修正

--- a/app/assets/stylesheets/_top_page.scss
+++ b/app/assets/stylesheets/_top_page.scss
@@ -39,6 +39,8 @@
       &__name{
         padding-left: 10px;
         padding-bottom:10px; 
+        position: relative;
+        left: -50px;
         float: left;
         display: inline-block;
         height: 2.8em;
