--- a/app/views/items/root.html.haml
+++ b/app/views/items/root.html.haml
@@ -49,19 +49,19 @@
       %h3.pickup__text
         = link_to category_path(2) do
           メンズ 新着アイテム
-      =render 'picup_content',{ items: @men_items }
       .pickup__view-all
         = link_to category_path(2) do
           すべての商品を見る
+      =render 'layouts/top_page',{ items: @men_items }
 
     .pickup__content.clearfix
       %h3.pickup__text
         = link_to category_path(3) do
           ベビー・キッズ 新着アイテム
-      =render 'picup_content',{ items: @child_items }
       .pickup__view-all
         = link_to category_path(3) do
           すべての商品を見る
+      =render 'layouts/top_page',{ items: @men_items }
 
 .main-contents
   .pickup
@@ -70,28 +70,28 @@
       %h3.pickup__text
         = link_to "/" do
           シャネル 新着アイテム
-      =render 'picup_content',{ items: @chanel_items }
       .pickup__view-all
         = link_to "/" do
           すべての商品を見る
+      =render 'layouts/top_page',{ items:  @chanel_items }
 
     .pickup__content.clearfix
       %h3.pickup__text
         = link_to "/" do
           ルイ ヴィトン 新着アイテム
-      =render 'picup_content',{ items: @vuitton_items }
       .pickup__view-all
         = link_to "/" do
           すべての商品を見る
+      =render 'layouts/top_page',{ items: @vuitton_items }
 
     .pickup__content.clearfix
       %h3.pickup__text
         = link_to "/" do
           ナイキ 新着アイテム
-      =render 'picup_content',{ items: @nike_items }
       .pickup__view-all
         = link_to "/" do
           すべての商品を見る
+      =render 'layouts/top_page',{ items: @vuitton_items }
 = render "layouts/banner"
 = render "layouts/footer"
 = render 'layouts/post-btn'
