--- a/app/views/layouts/_top_page.html.haml
+++ b/app/views/layouts/_top_page.html.haml
@@ -4,12 +4,15 @@
       = link_to item_path(item) do
         .top_page__box__contents
           .top_page__box__contents__image
-            = image_tag item.images.first,class:"img",style:"width:200px;height:188px;"
+            = image_tag url_for(item.images.first),class:"img",style:"width:200px;height:188px;"
             - if item.buyer_id.presence
               .sold1
                 %p SOLD
           .top_page__box__contents__price
-            = "$#{item.price}"
+            = "¥#{item.price}"
           .top_page__box__contents__name
             = "#{item.name}"
+            %i.fas.fa-heart
+              = "#{item.likes.count}"
+            
       
