--- a/app/views/items/_pickup_brand.html.haml
+++ b/app/views/items/_pickup_brand.html.haml
@@ -2,9 +2,9 @@
   .pickup__brand__main
     人気のブランド
   .pickup__brand__items
-    .pickup__brand__item.clearfix
+    .pickup__brand__items__item1.clearfix
       シャネル
-    .pickup__brand__item.clearfix
+    .pickup__brand__items__item2.clearfix
       ルイヴィトン
-    .pickup__brand__item.clearfix
+    .pickup__brand__items__item3.clearfix
       ナイキ
